--- a/_posts/2017-06-19-nekrasov.md
+++ b/_posts/2017-06-19-nekrasov.md
@@ -9,5 +9,5 @@ duration: "01:00:19"
 length: 33747261
 explicit: "no"
 block: "no"
-youtube: "https://www.youtube.com/watch?v=GBscRj901Xo"
+youtube: "GBscRj901Xo"
 ---
