--- a/_posts/2017-06-20-kudriats.md
+++ b/_posts/2017-06-20-kudriats.md
@@ -9,5 +9,5 @@ duration: "01:01:20"
 length: 33284278
 explicit: "no"
 block: "no"
-youtube: "https://www.youtube.com/watch?v=aJq5M-sdmEk"
+youtube: "aJq5M-sdmEk"
 ---
