--- a/_posts/2017-06-18-zharikov.md
+++ b/_posts/2017-06-18-zharikov.md
@@ -9,5 +9,5 @@ duration: "01:06:54"
 length: 44894061
 explicit: "yes"
 block: "no"
-youtube: "https://www.youtube.com/watch?v=KTntcDXd53Y"
+youtube: "KTntcDXd53Y"
 ---
