--- a/_posts/2017-06-23-scheglov.md
+++ b/_posts/2017-06-23-scheglov.md
@@ -1,5 +1,5 @@
 ---
-layout: single
+layout: post
 title: "Вавилон: Где начинается порнография?"
 date: 2017-06-23 
 file: 2017-06-23-scheglov
@@ -9,10 +9,8 @@ duration: "00:57:05"
 length: 31061546
 explicit: "no"
 block: "no"
-youtube: "https://www.youtube.com/watch?v=gstgQfuosko"
+youtube: gstgQfuosko
 ---
-{% include video id="gstgQfuosko" provider="youtube" %}
-
 ## Где начинается порнография?
 
 Нет точного определения порнографии, потому что это завязано на время, культуру, структуру общества, наличие тех или иных моральных координат и т.д.
