*** empty log message ***

--- a/_posts/2017-07-04-autopsy.md
+++ b/_posts/2017-07-04-autopsy.md
@@ -11,3 +11,44 @@ explicit: "no"
 block: "no"
 youtube: "wD6nUwQcNA8"
 ---
+Здравствуйте, дорогие! 
+
+Сегодня стало известно, что из России уехал оппозиционный политик Вячеслав Мальцев. Якобы его заподозрили в экстремизме, и он подался в эмиграцию. С одной стороны — вполне реальная ситуация. А с другой — что-то мне это подозрительно. Потому что Мальцев, как известно, бывший мент. Популярный блогер. Человек, близко знакомый с Володиным, чьей вотчиной является родной для Мальцева Саратов. И вся линия поведения Мальцева крайне подозрительна с самого начала. Мое конспирологическое восприятие политической картины исторической родины просто протестует! У меня полное ощущение, что Мальцев — это некий АНТИНАВАЛЬНЫЙ.
+
+Знаете, как работала система Суркова во внутренней политике с самого начала президентства Путина? Спецура — точнее, тогда была такая мутная контора, ФАПСИ — имела свой мощнейший социологический аппарат. При помощи очень четких технологий, зачастую под прикрытием всяких социологических контор или от их имени, социологи в погонах еженедельно проводили (и проводят) очень грамотные опросы общественного мнения во всей России. Причем, как водится в разведке, тремя независимыми друг от друга аналитическими группами, чтобы сопоставить результаты и избежать ошибок. Параллельно проводятся опросы элит, интервью с экспертами, которые действительно что-то соображают. Допустим, вы эксперт в какой-то области — например, в здравоохранении. И к вам обращается какой-то непонятный, но реально существующий журнал. Естественно, издаваемый на деньги каких-то неведомых спонсоров. И корреспондент задает вам некие интересные вопросы по теме. Вы на них отвечаете, не подозревая, что на самом деле это интервью не для журнала, а для генерала. Но в журнале оно обязательно выйдет. Даже на глянцевой бумаге. Но журнал — это всего лишь прикрытие. 
+
+Можно много рассказывать об этих технологиях, о фокус-группах, об интервью методом свободного поиска, когда сотрудник — просто бабушка в поликлинике, сидящая в очереди и беседующая за жизнь с другими бабушками. Или таксист-армянин с золотыми зубами и в кепке. Или девушка в университетской столовой на философском факультете. Естественно, таких сотрудников немного — может, тысяча на всю страну, может, десять. Не больше. Но эффект вычищения сырой информации и проверки они дают огромный. Еще есть перлюстрация электронной почты «реперных» типажей. А теперь и контент-анализ всех социальных медиа программными методами. Ко всему прочему, многие полученные выводы отрабатываются на фокус-группах, но это уже не очень массовое явление — сложно, при этом легко запалиться. 
+
+Суть того, о чем я говорю, такова: Путин, который мыслит на уровне опера райотдела КГБ, умеет получать информацию и знает технологии. И Кремль знает все. Полную картину умонастроений в любой части страны, в любом городе и любом поселке. Конечно, Путина не интересуют микрорайоны Урюпинска, но ОБЩАЯ картина обработана так, что можно поднять любой слой: возрастной, национальный, образовательный, гендерный — и все расклады известны. Все это упаковано в программу, которая называется «НООСКОП». Это и есть реализация того самого «нооскопа», который обсуждали, когда Антон Вайно возглавил администрацию президента.
+
+А для чего это надо? Кремль переживает за то, как живут в Задрищенске? Нет. Вообще наплевать. Картина нужна для того, чтобы ее представить в виде поля, «поляны» — так называют это политические технологи. Вот как невероятный сундук с тысячей замков, замочков и замочечков — и к каждому замку нужен свой золотой ключик. То есть Сурков, когда еще у Ходорковского заведовал пиаром, отработал технологию, как полностью «закрыть поляну». 
+
+Например, картина показывает: в обществе (точнее в каких-то стратах, кластерах) есть запрос на коммунистов. А в каком-то кластере — на фашистов. Кто-то обеспокоен притеснением русских, а кто-то — засилием гомосексуального дискурса. Кому-то хочется вместо республики видеть монархию, кто-то считает главной бедой коррупцию, а кто-то — разврат и бездуховность. И вот к каждой страте подбирается ключик. То есть способ объединить тех, кто полезен или безопасен, и разделить тех, кто способен на всякие разные глупости — типа бунтов, протестов, которые могут выйти из-под контроля и пошатнуть систему власти, построенную на пиаре. В России сейчас совершенно особый политический строй — пиарократия. 
+
+Итак, управление внутренней политики администрации президента совместно с аналитическими центрами, приписанными к службе БТ ФСБ, разрабатывает тактику. Во-первых, вырабатываются «темники» и «подгрузы» для медиа. Особенно для тех медиа, которые как бы «негосударственные». От «Эха Москвы» и «Новой газеты» до всяких совсем оппозиционных. Тут тоже своя технология, но сейчас не об этом. Главное, что отработана вся конструкция вливания в уши информации. Есть Киселев, а есть Саша Сотник. Есть протоирей Чаплин, а есть Константин Боровой. Конструкция уравновешена со всех сторон. Каждый бит информации практически под контролем, даже если выпускающий его в медийное пространство и не подозревает, что работает на Кремль. Это тоже «нооскоп» в действии. Массы настолько оболванены и некритичны, что полностью персонифицированы. Вот как бы главное — не идея, а лидер, который сам себе идея. В России голосуют сердцем. Особенно в интернет-пространстве, на наших глазах заменяющем все остальные медиа. И для каждой скважины нужен свой человек-ключик. Чаще всего он уже есть. Просто надо его найти и им управлять. И лучше всего методом горящей клетки — заводят человека в обстоятельства-клетку. Затем открывают двери в две соседние, а ту в которой человек — поджигают. Человек может выбрать: идти в правую дверь, спасаясь от огня, или в левую. Он выбирает ту, которая ему больше нравится (но они одинаковые). И потом поджигают эту клетку — и опять выбор. И так его ведут до того места, где он нужен. Чтобы оказался точно в тех обстоятельствах, когда он максимально ограничен в свободе, но полностью соответствует месту, которое для него подготовлено. Думаете это сложно? Нет! Задачка для двух капитанов райотдела ФСБ. Элементарно.
+
+Знает ли жертва, что ее ведут? Чаще всего догадывается. И сама ищет контакта с «кураторами». Заключается пакт: вы не трогаете семью, гарантируете безопасность детям и неприкосновенность бизнеса, а я готов услышать ваши предложения, если они выгодны мне. Кому-то нужна власть, кому-то — деньги, кому-то — слава. А кому-то просто понятно, что за ним будущее. Как шестидесятники шли на контакт с КГБ, чтобы их не отрезали от кормушки. Ну, всякие барды, полуопозиционные писатели и прочие «властители умов». Так и современные нам герои оппозиции — как совсем лояльной, так и совсем страстно оппозиционной. Почти все, за мельчайшими исключениями. Увы, Кремль — это сильная контора. А спецура может и убить. Не из пистолета и не ядом, просто загнать в клетку, из которой нет выхода. В которой позор, долги, предательства близких, измены любимых, наркотики детей — много разных вариантов. Люди слабы, и ими легко манипулировать. Гораздо легче, чем кажется. Не верьте никому в России, кто говорит о власти. Ни Путину, ни Навальному, ни Мальцеву — никому! Никто не действует по собственной воле. Все просто ключики, подобранные к замкам. И бойтесь тех, кто верит, — они просто идиоты.
+
+Да, мне видится, что Навальный как фигура появился сам, но его поставили в данную ситуацию. И берегут, как зеницу ока. Потому что он НЕОБХОДИМ в грядущей комбинации. А Мальцев — дублер. Точнее, у него другая конфигурация, он немного для другого замка. Но, в сущности, это два ключа к протестному электорату. Сейчас его немного — 25% максимум. В Москве и Петербурге, в Екатеринбурге и Новосибирске — намного больше, чем в глубинке. И число этих людей может достигнуть 30%, а то и 40%. Но Кремлю на это наплевать. Все равно на выборах ситуация будет такой: ставленник Кремля победит оппозиционера. 
+
+Я тысячу раз говорил, что, скорее всего, Путин в 2018 году на выборы не пойдет, выставив вместо себя преемника. Я полагал, что это будет Кудрин. Но есть и другая версия — губернатор Дюмин. 
+
+По сети ходит прогноз из многих пунктов. Очень интересный. Кстати, на 90% он заимствован из моих публикаций.
+1. Владимир Путин на выборы не пойдет. 
+2. Преемником будет 45-летний губернатор Тульской области Алексей Дюмин. 
+3. Выборы пройдут в день присоединения Крыма — 18 марта. Дюмин, как командующий Сил специальных операций России, получил за эту операцию звезду Героя России. Кстати, день Сил специальных операций России будет праздноваться 27 февраля, то есть в ходе избирательной кампании. Ну и 23 февраля не забываем. Вся избирательная кампания пройдет под брендом «защитник» и будет посвящена кандидату политических наук (его диссертация посвящена принципам деятельности «европейской восьмерки»), губернатору-хозяйственнику, генерал-лейтенанту Алексею Дюмину, 20 лет отслужившему в ФСО, ГРУ и Минобороны России (закончил службу заместителем министра обороны РФ). 
+4. Председателем правительства будет губернатор Новгородской области, экономист, бывший куратор Агентства стратегической информации, автор экономических программ губернатора Дюмина — Андрей Никитин. 
+5. Министром обороны останется Сергей Шойгу. «Крымская весна» связала одной цепью Путина, Дюмина и Шойгу и является залогом их коллективной безопасности. Министром иностранных дел останется Сергей Лавров. Чтобы Шойгу и Лавров не волновались, генерала и дипломата Анатолия Антонова отправят послом в США (был замом Шойгу и замом Лаврова). 
+6. Председателем ФСБ станет коллега Дюмина по ФСО Евгений Зиничев. Именно поэтому он срочно покинул пост губернатора Калининградской области (не проработав и двух месяцев) и осваивает должность заместителя председателя ФСБ. 
+7. На Росгвардии останется доверенное лицо Владимира Путина — Виктор Золотов. 
+8. Вячеслав Володин до 2021 года останется председателем Госдумы. 
+9. Собянин, в принципе, может осенью 2018 года переизбраться мэром Москвы, если на этот пост не захочет пойти Сергей Кириенко. Если захочет, то «организатору побед» никто не откажет. В 1999 году Кириенко уже участвовал в выборах мэра Москвы, уступив Юрию Лужкову. Кириенко умеет добиваться результата и ждать. 
+10. Зюганов, Жириновский, Миронов будут обязаны участвовать в выборах президента статистами. Это будут их последние выборы, после которых они станут пожизненными членами Совета Федерации по президентской квоте. 
+11. Не исключено, что на выборы президента пустят Алексея Навального, которого Дюмин победит во втором туре. Новый президент придет на 12 лет, и будет неплохо, если он победит честно. Так или иначе, будет какой-то яркий оппозиционер, близкий к Навальному... Высокая явка будет обеспечена (не менее 70%). Второй тур пройдет 1 апреля, Дюмин получит более 70%. 
+12. В любом случае, после ухода Зюганова, Жириновского и Миронова будет реформирована партийная система России. Прощай КПРФ, СР и ЛДПР! В Госдуму РФ образца 2021 года пустят конструктивную оппозицию во главе с Алексеем Навальным. 
+13. Курс России будет европейским, и все «мракобесы» (Соловьевы, Киселевы и прочие) будут сданы в утиль. 
+14. Путин будет «отцом нации» наподобие китайского Дэн Сяопина (название должности придумают). 
+15. Дмитрий Анатольевич пойдет в «газовики» или председателем Конституционного суда. 
+
+Собственно, на сегодня все. Как стать участником нашего проекта, вы знаете: найти в «Фейсбуке» группу «ПРОСТРАНСТВО СМЫСЛОВ медиа-проект» и обязательно ответить на вопросы админа. Без ответов мы не принимаем. И будет у вас возможность на практике реализовать наш девиз: «Мы помогаем умным, умные помогают нам». 
+Спасибо, до завтра!
