*** empty log message ***

--- a/_posts/2017-07-05-autopsy.md
+++ b/_posts/2017-07-05-autopsy.md
@@ -11,3 +11,57 @@ explicit: "no"
 block: "no"
 youtube: "ysRPEYVkIaE"
 ---
+Привет, это программа «Вскрытие покажет» — мы режем по живому и не морщимся. Мы хотим знать, что внутри. И мы узнаем, хотя внутри всё совсем не так, как кажется снаружи. Тем, кто брезглив — лучше не видеть. Но нам надо знать всё. И мы делимся своими впечатлениями с вами, дорогие зрители проекта «Пространство смыслов».
+
+Это прямой эфир, я Дмитрий, и спасибо, что смотрите нас на нашем канале.
+
+Итак, сегодня, 5 июля, спикер Совета Федерации тетя Валя заявила, что высокий законодательный орган, в котором она держит свой скипетр, примет судьбоносное решение — разрешит водительские удостоверения Киргизии на территории России. Казалось бы, бешеный законодательный принтер выплевывает очередной лист с буквочками, не имеющий никакого смысла. Ан нет! Давайте-ка проедем нашим аналитическим скальпелем по это непонятной хреновине и заглянем внутрь: зачем в России киргизские права?
+
+А затем, что это очередная возможность подтащить мигрантов-гастарбайтеров. Узбеки, таджики, киргизы — потенциальные водители маршруток, грузовичков-газелей и прочего бюджетного транспорта. И не просто почти бесправные гастарбайтеры, но и потенциальные граждане Российской Федерации. Россия вербует жителей. И вовсе не потому, что идет отток населения в эмиграцию, не потому даже, что рождаемость достаточно низка, а смертность высока. А потому, что России нужен новый электорат.
+
+Не верьте во всякую чушь про монархию и бессменное правление Владимира Владимировича Х. Точнее, П. Ой, я кажется запутался. Вообще-то он ВН — вождь нации. Ну, не суть, — российские высшие элиты намерены укрепить электоральную базу путинизма за счет приезжих. 
+Помните, совсем недавно было принято принципиальное решение: продвигать идею раздачи двуглавых паспортов всем, кто родился в СССР. Понятно, что жизнь в Средней Азии достаточно трудна, если ты не сын бая или не чиновник местного елбасы. Традиционый уклад среднеазиатских обществ высвобождает каждый момент кучу вторых, третьих, четвертых и десятых сыновей, а бизнес (если он есть) или ферма достаются старшему. Так устроено традиционное общество — семьи огромные. Значит, всегда есть избыток малообеспеченного, маргинального мужского населения. Они ищут работу, чтобы иметь возможность жениться и содержать жену. И готовы ехать таксовать в Россию. И счастливы этой возможности. Значит, благодарны правительству. И будут всячески поддерживать любые его решения, особенно если это самое правительство будет незримо создавать дискурс нетерпимости к приезжим.
+
+Вы понимаете к чему я веду?
+
+В свое время один очень известный политтехнолог, кстати, владелец своего крупного центра, в котором были и социологи, и креаторы, и копирайтеры, и технологи-полевики, получил от администрации заказ на создание сети футбольных фанатских организаций по всей России. Многомиллионный заказ. Думаю, тридцать лямов зеленью, не меньше. На много лет. И стал его осуществлять. Отдельным «прицепом» к этому заказу шло создание националистических групп, совершенно подконтрольных своим кураторам. Была там и какая-то партийка мелкая, и несколько газеток в русском национальном духе, типа «Православие или всё», и так далее. Красиво работал технолог. Очень. 
+
+И вот когда с одной стороны есть некая движуха «Черные, убиратесь!» или «Хватит кормить Кавказ», то тот, кто боится стать жертвой скинхедов — тот будет самым преданным избирателем того, кто этих самых скинхедов не поддерживает. Очень простая технология. Помните я говорил про метод горящей клетки? Так в нее можно завести не только Навального с Мальцевым, но и целые социальные группы. Например, приезжих. Или москвичей, как сейчас их заводит в такую клетку Собянин, но речь не об этом. Мы говорим о новых избирателях Кремля.
+
+Вы скажете, что их совсем не много. Но, поверьте, я вчера об этом уже рассказывал, — все на учете. Каждый голос. И лишних голосов на выборах не бывает.
+
+Я несколько лет назад был в Венесуэле, еще при Чавесе. И познакомился с личной переводчицей команданте Уго, девушкой, которая родилась уже в Каракасе, но в семье русских эмигрантов. И она меня спрашивает: «А вы не хотите получить венесуэльский паспорт?» Я говорю: «Как? Кто мне его даст?» А она отвечает: «Так вам надо попросить команданте о встрече, поговорить с ним». — «Как это? Он что принимает всех желающих?» Она мне объяснила: «Ну, не всех, конечно, но вас примет, у вас же семья». — «И что?» — «Ну ведь это четыре голоса!»
+
+Оказывается, Чавеса надо было просить на личном приеме о выдаче паспорта, и он издавал специальный указ. Каждый голос на счету! Ведь после встречи с ним вы будете голосовать только за него и его партию — из благодарности. Я как-то не вдохновился и не стал просить Чавеса о встрече. Мне хватило впечатлений от страны, когда я покатался по Каракасу на такси. Пешком там ходить не стоит даже средь бела дня в центре — только короткими перебежками. Специфическое место. 
+
+Но у Чавеса ситуация была хуже, чем у Путина: протестный электорат составлял почти половину. Чависты перед каждыми выборами вылавливали индейцев в дельте реки Амазонки и на вертолетах возили им всякую снедь и передвижной паспортный стол. Выдавали сразу «цедулы» (так в Латинской Америке внутренние паспорта называются), и сразу устраивали досрочное голосование. А потом индейцы уплывали на своих пирогах на другой берег, в Колумбию, и оттуда приплывало следующее племя. 
+
+Вот так и с киргизскими таксистами будет: получат паспорт и проголосуют. Для того и клятву сейчас разрабатывают. Вот что показывает вскрытие....
+
+Кстати, анекдот на тему паспортов свежий. Сидят в баре Депардье, Монсон и Стивен Сегал. Выпивают, телек смотрят. А там показывают, как Марадона российский паспорт получает. Жерар опрокидывает стопарь и говорит: «Понаехали, блин!»
+
+Я всё думал: зачем раздают русские паспорта этим побитым молью героям прошлого? Что за прикол? А вскрытие показала — это государственный пиар. Реклама. Получи русский паспорт, будь как Стивен Сигал, будь лучше Марадоны, будь пьянее Депардье и вообще — все получают и ты тоже записывайся! Нам нужны дебилы!
+
+***
+
+Северная Корея вчера запустила баллистическую ракету. Впервые удачно, говорят. Не обошлось без технической помощи и Ирана, и Китая, и арабских спецов. Ну, русские ученые там давно на ядерных объектах работают. Для чего же Корея троллит мир? А ведь если вдуматься: ну, жалкая страна, с извращенным населением, с нищенской экономикой, на грани предела. Зачем им угрожать всему миру, дразнить США, Китай, Японию, Россию? 
+
+А вот зачем! Современный мир строится на восприятии дураков. Истеблишмент создает угрозы, которые пугают обывателя. Ну вот чего мы все боимся в глубине души больше всего? Судного дня. Огненной геенны. И это в нас не только от религиозных ощущений, но это еще и базовый страх, генетически унаследованный от древнего человека! Страх огня, лесного пожара, то, что страшнее всего. А страшнее всего ядерная война. И вроде бы никто не собирается пулять ракетами — все страны вроде как давно договорились избегать ядерных угроз. И страх снижается. А если снижается страх, то падает управляемость миром. Значит, надо этот страх поддерживать. 
+
+Всем в мире выгодно, чтобы была угроза. Когда-то это был СССР, потом всякие Саддамы Хусейны и Бин Ладены. Сейчас товарищ Ким. Не будет Кима, нужно будет нового делать, а это сложно и действительно опасно. А тут плюгавенькая Корея. Очень нужное и своевременное действо — пульнуть ракетой в сторону Японии накануне встречи большой двадцатки. Как все-таки примитивно устроена система государственных угроз, и как эффективно это работает! Всегда нужен монстр, без которого нет супергероя.
+
+***
+
+Министерство по чрезвычайным ситуациям и Русская православная церковь договорились сотрудничать. Одной из целей соглашения, которое подписали Владимир Пучков и патриарх Кирилл, является «духовное окормление личного состава системой МЧС и членов их семей, а также поддержание духовности и чувства патриотизма». Теперь «организации РПЦ будут участвовать в оказании помощи населению, пострадавшему в результате чрезвычайных ситуаций. В епархиях будут созданы подразделения добровольной пожарной охраны».
+
+Это сообщение можно было бы не анализировать, настолько бредовым кажется сам смысл этого. Но я все-таки постараюсь вскрыть и показать что лежит за этим бредом. Помните, вчера я рассказывал о том, как устроен нооскоп? А только что говорил про то, как выгоден миру Ким, пугающий и нелепый жирдяй со своими ракетами, окруженный маршалами с орденами на пузе и какими-то корейским девственницами. 
+
+Так вот: РПЦ в России играет ту же самую роль. Именно подталкивая методом горящей клетки, спецура управляет патриархией, чтобы она делала как можно больше нелепых вещей. И чтобы у умных и внятных людей было ощущение опасности. 
+
+Это очень выгодно Кремлю. Во-первых это выдавливает из страны протестный электорат, освобождая место для новых граждан. Во-вторых, это подталкивает типа умных в открытую клетку антиклерикализма, который у нас персонифицируется в одном бывшем депутате Государственной думы, сменившем коня на манерные трубки и рассказы про отцов Пигидиев. Кстати, доверенное лицо Владимира Путина на прошлых выборах. 
+
+Вот и подумайте, зачем под него сгоняют людей. Пишите версии в ленте ютуба и на нашей странице в ФБ. А я завтра расскажу свою версию.
+
+
+Мы вас любим, счастливо!
+
