*** empty log message ***

--- a/_posts/2017-07-06-zharikov.md
+++ b/_posts/2017-07-06-zharikov.md
@@ -14,21 +14,21 @@ youtube: "DA4zp7p-pkE"
 
 Сергей Жариков [пересказывает в фейсбуке](https://www.facebook.com/permalink.php?story_fbid=663829850482923&id=100005677421231):
 
-> Что такое власть: это производство и контроль неопределенности. Есть такой хороший философ-патриот Эдуард Надточий. Он придумал такой концепт, который называется "Просак". Помните, есть выражение "Попал в просак"? А что такое этот просак? У человека есть 2 физиологических отверстия, которые люди используют ради удовольствия. И просак находится между двумя этими отверстиями. Попал в просак - значит не попал ни туда ни сюда. То есть если ты попал в одно отверстие, то ты как бы пидорас. А попал в другое - ты уже уважаемый человек, Д'Артаньян. Власть производит эту неразличимость и контролирует её. В этом вся суть власти.
+> Что такое власть: это производство и контроль неопределенности. Есть такой хороший философ-патриот Эдуард Надточий. Он придумал такой концепт, который называется «Просак». Помните, есть выражение «Попал в просак»? А что такое этот просак? У человека есть 2 физиологических отверстия, которые люди используют ради удовольствия. И просак находится между двумя этими отверстиями. Попал в просак — значит не попал ни туда ни сюда. То есть если ты попал в одно отверстие, то ты как бы пидорас. А попал в другое — ты уже уважаемый человек, Д’Артаньян. Власть производит эту неразличимость и контролирует её. В этом вся суть власти.
 > 
-> Художник - человек, производящий уникальный продукт. Искусство и художничество - это разные вещи. У нас говорят "Вот он мастер". Мастер может быть и отличным мастером копий. А художник производит только уникальное. Он может картины писать, может трактор сделать, дом построить - это тоже художник. Актуальный художник зависит ещё от времени. Мало того что он создаёт уникальное, он производит некий акт временения времени. Это "временение" и создаёт актуальность. В отличие от аналитика художник описывает как раз то, чего НЕ ПОНИМАЕТ.
+> Художник — человек, производящий уникальный продукт. Искусство и художничество — это разные вещи. У нас говорят «Вот он мастер». Мастер может быть и отличным мастером копий. А художник производит только уникальное. Он может картины писать, может трактор сделать, дом построить — это тоже художник. Актуальный художник зависит ещё от времени. Мало того что он создаёт уникальное, он производит некий акт временения времени. Это «временение» и создаёт актуальность. В отличие от аналитика художник описывает как раз то, чего НЕ ПОНИМАЕТ.
 > 
-> Опять мы вернулись к противостоянию Андропова-Брежнева. Дураков этих старых маразматиков и молодых кэгэбэшников, которые окончили физтех, получили нормальное образование. Они смотрят на это и думают когда ж этот маразм закончится. Или давайте конспирологически мыслить. Для кого этот маразм? На кого он работает? Кто это все запрещает. Это же вредит стране.
+> Опять мы вернулись к противостоянию Андропова-Брежнева. Дураков этих старых маразматиков и молодых кэгэбэшников, которые окончили физтех, получили нормальное образование. Они смотрят на это и думают когда ж этот маразм закончится. Или давайте конспирологически мыслить. Для кого этот маразм? На кого он работает? Кто это все запрещает. Это же вредит стране.
 > 
-> Конечно никакой войны нет между Россией и Украиной. Идёт внутриноменклатурный конфликт в Украине. То есть Янукович (донецкий) в союзе с днепропетровскими хотели (как у нас в России питерские) покрыть, как покрывает петух курицу, всю территорию страны. И не получилось. И пошла ответка. Все эти собирательные "винницкие" поехали на Донбасс мочить. Но не население мочить, а бригадиров. Естественный ответ, как у братанов, всё по этой схеме. Но у донецких очень сильное влияние в Москве. Ну естественно свои стали поддерживать своих. Но днепровские кинули донецких. Они же думали "Сейчас мы Крым и весь восток оттяпаем", а днепровские кинули донецких. Вот что произошло.
+> Конечно никакой войны нет между Россией и Украиной. Идёт внутриноменклатурный конфликт в Украине. То есть Янукович (донецкий) в союзе с днепропетровскими хотели (как у нас в России питерские) покрыть, как покрывает петух курицу, всю территорию страны. И не получилось. И пошла ответка. Все эти собирательные «винницкие» поехали на Донбасс мочить. Но не население мочить, а бригадиров. Естественный ответ, как у братанов, всё по этой схеме. Но у донецких очень сильное влияние в Москве. Ну естественно свои стали поддерживать своих. Но днепровские кинули донецких. Они же думали «Сейчас мы Крым и весь восток оттяпаем», а днепровские кинули донецких. Вот что произошло.
 > 
-> Вы поймите, что такое министерство обороны. Там тоже очень много донецких. Путин на это просто глаза закрывал. Другие кланы просто закрывали глаза на то, что донецкие поддерживают донецких. Почему? Чтобы не было прецедента - Майдана. Этот прецедент - Майдан посчитали нелегитимным. Ну нельзя вот так власть скидывать, как посчитали в Москве. Надо собраться, потереть друг с другом, поторговаться. Понятно что никакого волеизъявления народа не было.
+> Вы поймите, что такое министерство обороны. Там тоже очень много донецких. Путин на это просто глаза закрывал. Другие кланы просто закрывали глаза на то, что донецкие поддерживают донецких. Почему? Чтобы не было прецедента — Майдана. Этот прецедент — Майдан посчитали нелегитимным. Ну нельзя вот так власть скидывать, как посчитали в Москве. Надо собраться, потереть друг с другом, поторговаться. Понятно что никакого волеизъявления народа не было.
 > 
-> Не зря Навальный говорит только о борьбе с коррупцией, хотя там много о чем можно сказать. Во первых про этих сраных комсомольцев, которые получили всю собственность и все ресурсы страны за так. Первый вопрос: по какой процедуре? Если ты оппозиционер, то скажи! Как это они всю собственность получили? А остальные - 5 тысяч пенсии и - вперёд на кладбище! Нет. По игре он должен бороться с коррупцией, потому что это на руку спецслужбам. Ситуативная ОДИ по методологии Щедровицкого.
+> Не зря Навальный говорит только о борьбе с коррупцией, хотя там много о чем можно сказать. Во первых про этих сраных комсомольцев, которые получили всю собственность и все ресурсы страны за так. Первый вопрос: по какой процедуре? Если ты оппозиционер, то скажи! Как это они всю собственность получили? А остальные — 5 тысяч пенсии и — вперёд на кладбище! Нет. По игре он должен бороться с коррупцией, потому что это на руку спецслужбам. Ситуативная ОДИ по методологии Щедровицкого.
 > 
-> Однако, борьба с коррупцией возможна при наличии институтов. Это маркер институционального общества. У нас нет институтов, потому нет и коррупции, непонятно с чем бороться. Нет никакой в России коррупции, это образ жизни. С чем бороться то, с жизнью? Это пляска на карго сцене.
+> Однако, борьба с коррупцией возможна при наличии институтов. Это маркер институционального общества. У нас нет институтов, потому нет и коррупции, непонятно с чем бороться. Нет никакой в России коррупции, это образ жизни. С чем бороться то, с жизнью? Это пляска на карго сцене.
 > 
-> Вроде бы мы строили социализм, а социальное государство построили они. Парадокс же. А этот дикий капитализм, который транслировали через оптику советского журнала "Крокодил", построили у нас. То есть мы их критиковали, а сами у себя построили.
+> Вроде бы мы строили социализм, а социальное государство построили они. Парадокс же. А этот дикий капитализм, который транслировали через оптику советского журнала «Крокодил», построили у нас. То есть мы их критиковали, а сами у себя построили.
 > 
-> Нельзя владеть людьми. Сейчас человек главная валюта. Мозги его сейчас дороже всего, мозги надо беречь, не давать им уехать. Не силой, конечно, а как-то привлекать.
+> Нельзя владеть людьми. Сейчас человек главная валюта. Мозги его сейчас дороже всего, мозги надо беречь, не давать им уехать. Не силой, конечно, а как-то привлекать.
 
