--- a/_posts/2017-07-06-zharikov.md
+++ b/_posts/2017-07-06-zharikov.md
@@ -12,7 +12,7 @@ block: "no"
 youtube: "DA4zp7p-pkE"
 ---
 
-Сергей Жариков [пересказывает в фейсбуке](https://www.facebook.com/permalink.php?story_fbid=663829850482923&id=100005677421231):
+### Сергей Жариков [пересказывает в фейсбуке](https://www.facebook.com/permalink.php?story_fbid=663829850482923&id=100005677421231):
 
 > Что такое власть: это производство и контроль неопределенности. Есть такой хороший философ-патриот Эдуард Надточий. Он придумал такой концепт, который называется «Просак». Помните, есть выражение «Попал в просак»? А что такое этот просак? У человека есть 2 физиологических отверстия, которые люди используют ради удовольствия. И просак находится между двумя этими отверстиями. Попал в просак — значит не попал ни туда ни сюда. То есть если ты попал в одно отверстие, то ты как бы пидорас. А попал в другое — ты уже уважаемый человек, Д’Артаньян. Власть производит эту неразличимость и контролирует её. В этом вся суть власти.
 > 
